fixed navbarstyling on smaller viewport

--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,46 +1,136 @@
 .headbar {
-    background-color: rgb(0, 0, 0);
-    color: rgb(255, 255, 255);
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  .menu {
-    height: 80px;
-    width: 20%;
-    align-items: center;
-    justify-content: left;
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.menu {
+  height: 80px;
+  flex: 1; /* Take up available space */
+  display: flex;
+  align-items: center;
+  max-width: 80px;
+}
+
+.menu :hover {
+  cursor: pointer;
+}
+
+.menu img {
+  object-fit: contain;
+  max-width: 100%;
+  height: auto;
+}
+
+.header {
+  font-size: 44px;
+  flex: 1; /* Take up more space than the menu */
+  display: flex;
+  align-items: center;
+  color: #c7c7c7;
+  justify-content: center;
+  margin-right: -5%;
+}
+
+.search {
+  flex: 1; /* Take up available space and adjust as needed */
+  padding-right: 20px; /* Adjust as needed for spacing */
+  font-size: 20px;
+  border: black solid;
+  border-radius: 30px;
+  padding: 10px;
+  margin-right: 20px;
+}
+
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  padding-top: 60px;
+  transition: 0.5s;
+}
+
+.opensidenav {
+  height: 100%;
+  width: 30%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  padding-top: 60px;
+  transition: 0.5s;
+}  
+
+.Link {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.Link:hover {
+  color: #f1f1f1;
+  cursor: pointer;
+}
+
+.a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.a:hover {
+  color: #f1f1f1;
+  cursor: pointer;
+}
+
+.closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+  cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .headbar {
+    flex-direction: row;
+    text-align: center;
   }
 
-  .menu :hover {
-    cursor: pointer;
-  }
-  
-  .header {
-    font-size: 44px;
-    display: flex;
-    align-items: center; /* Center the content vertically */
-    justify-content: center;
-    width: 60%;
-    color: #c7c7c7;
-    font-size: 3.6rem;
-  }
-  
-  .sitename {
-    display: flex;
-    font-size: 44px;
-    flex: 1; /* Make it take up the remaining space */
-    text-align: center; /* Center the text horizontally */
+  .menu {
     width: 20%;
-    justify-content: right;
-    padding-right: 20px;
   }
-  
+
+  .header {
+    display: none;
+  }
+
+  .search {
+    font-size: 20px; /* Reduce font size for sitename */
+    flex: 2; /* Take up available space and adjust as needed */
+    padding-right: 40px; /* Increase spacing as needed */
+  }
+
   .sidenav {
     height: 100%;
     width: 0;
@@ -52,62 +142,9 @@
     overflow-x: hidden;
     padding-top: 60px;
     transition: 0.5s;
-  }  
+  }
 
   .opensidenav {
-    height: 100%;
-    width: 30%;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #111;
-    overflow-x: hidden;
-    padding-top: 60px;
-    transition: 0.5s;
-  }  
-
-  .Link {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-    transition: 0.3s;
+    width: 100%;
   }
-
-  .Link:hover {
-    color: #f1f1f1;
-    cursor: pointer;
-  }
-  
-  .a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-    transition: 0.3s;
-  }
-  
-  .a:hover {
-    color: #f1f1f1;
-    cursor: pointer;
-  }
-  
-  .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
-    cursor: pointer;
-  }
-
-.search {
-  font-size: 20px;
-  border: black solid;
-  border-radius: 30px;
-  width: 100%;
-  padding: 10px;
 }
